force-app/main/default/objects/User_Analytics__c/User_Analytics__c.object-meta.xml
<CustomObject>
    <label>User Analytics</label>
    <nameField>
        <label>Username</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>