force-app/main/default/objects/User_Analytics__c/fields/Request_Type_Action__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Action__c</fullName>
    <label>Request Type Action</label>
    <length>30</length>
    <type>Text</type>
</CustomField>