force-app/main/default/objects/User_Analytics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Page_Name__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Timestamp__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/1/2020 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>